# ipm-mastercard

./: .flake8  .gitignore  README.md  main.py  mypy.ini  pyproject.toml  teste.py
src/core/: ISO8583.py  __init__.py  iso.py
src/data/: insert_outgoing.py  iso_db.py  isodb.py
src/helpers/: __init__.py  datalog.py  file_search.py  filedata.py  searcharq.py  transform.py
src/models/: __init__.py  types.py
src/models/parse/: __init__.py  parse_rule.py
src/template/: __init__.py  base.py  mastercard.py
src/template/parse/: __init__.py  parsedb.py
src/util/: __init__.py  print_color.py
src/utils/: __init__.py  message.py  parse.py  version.py
tests/: teste.py
